--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -425,14 +425,14 @@
     "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
     "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "validation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
-    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har dekket de 10 første dagene selv",
+"validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har dekket de 10 første dagene selv",
     "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt hele dager med fravær fra jobb",
     "validation.fraværPerioder.listIsEmpty": "Du har ikke lagt til dager med fullt fravær",
     "validation.fraværPerioder.ulikeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
     "validation.fraværDager.listIsEmpty": "Du har ikke lagt til dager med delvis fravær",
     "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt dager med delvis fravær fra jobb",
     "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har vært i utlandet noen av dagene du søker omsorgspenger for",
-    "validation.perioder_utenlandsopphold.listIsEmpty": "Når du har valgt at du har utenlandsopphold i perioden med fravær, må du legge til minst ett utenlandsopphold",
+    "validation.perioder_utenlandsopphold.listIsEmpty": "Du har svart du har vært i utlandet i perioden du søker for, du må derfor legge til utenlandsopphold.",
     "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har søkt om andre utbetalinger fra NAV",
     "validation.andreUtbetalinger.listIsEmpty": "Du har ikke valgt hvilke andre utbetalinger du har søkt om",
 
@@ -451,7 +451,7 @@
     "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert informasjon om virksomheten din",
     "validation.aktivitetFravær.noValue": "Du må velge hvilket arbeid du hadde fravær fra {dato}",
     "validation.harFosterbarn.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har fosterbarn",
-    "validation.fosterbarn.listIsEmpty": "Du har ikke registrert noen fosterbarn",
+    "validation.fosterbarn.listIsEmpty": "Du har svart at du har fosterbarn, du må derfor legge til fosterbarn.",
     "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du har bodd i utlandet i hele eller deler av de siste 12 månedene",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de siste 12 månedene",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de siste 12 månedene har datoer som overlapper",
