--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -422,43 +422,43 @@
 
     "summary.andreIntekter.header": "Andre utbetalinger",
 
-    "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
-    "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
+    "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp.",
+    "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp.",
     "validation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
-    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har dekket de 10 første dagene selv",
-    "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt hele dager med fravær fra jobb",
-    "validation.fraværPerioder.listIsEmpty": "Du har ikke lagt til dager med fullt fravær",
+    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har dekket de 10 første dagene selv.",
+    "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt hele dager med fravær fra jobb.",
+    "validation.fraværPerioder.listIsEmpty": "Du har ikke lagt til dager med fullt fravær.",
     "validation.fraværPerioder.ulikeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
-    "validation.fraværDager.listIsEmpty": "Du har ikke lagt til dager med delvis fravær",
-    "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt dager med delvis fravær fra jobb",
-    "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har vært i utlandet noen av dagene du søker omsorgspenger for",
+    "validation.fraværDager.listIsEmpty": "Du har ikke lagt til dager med delvis fravær.",
+    "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt dager med delvis fravær fra jobb.",
+    "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har vært i utlandet noen av dagene du søker omsorgspenger for.",
     "validation.perioder_utenlandsopphold.listIsEmpty": "Du har svart du har vært i utlandet i perioden du søker for, du må derfor legge til utenlandsopphold.",
-    "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har søkt om andre utbetalinger fra NAV",
-    "validation.andreUtbetalinger.listIsEmpty": "Du har ikke valgt hvilke andre utbetalinger du har søkt om",
+    "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har søkt om andre utbetalinger fra NAV.",
+    "validation.andreUtbetalinger.listIsEmpty": "Du har ikke valgt hvilke andre utbetalinger du har søkt om.",
 
-    "validation.frilans_erFrilanser.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du er frilanser",
-    "validation.frilans_startdato.dateHasNoValue": "Du må fylle ut når du startet som frilanser",
+    "validation.frilans_erFrilanser.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du var frilanser.",
+    "validation.frilans_startdato.dateHasNoValue": "Du må fylle ut når du startet som frilanser.",
     "validation.frilans_startdato.dateHasInvalidFormat": "Datoen for når du startet som frilanser er ugyldig. Gyldig format er dd.mm.åååå.",
     "validation.frilans_startdato.dateIsAfterMax": "Datoen for når du startet som frilanser kan ikke være etter dagens dato.",
-    "validation.frilans_sluttdato.dateHasNoValue": "Du må fylle ut når du sluttet som frilanser",
+    "validation.frilans_sluttdato.dateHasNoValue": "Du må fylle ut når du sluttet som frilanser.",
     "validation.frilans_sluttdato.dateHasInvalidFormat": "Datoen for når du sluttet som frilanser er ugyldig. Gyldig format er dd.mm.åååå.",
     "validation.frilans_sluttdato.dateIsAfterMax": "Datoen for når du sluttet som frilanser kan ikke være etter dagens dato.",
     "validation.frilans_sluttdato.dateIsBeforeMin": "Datoen for når du sluttet som frilanser kan ikke være før datoen du startet.",
-    "validation.frilans_jobberFortsattSomFrilans.yesOrNoIsUnanswered": "Du må svare på om du fortsatt jobber som frilanser",
+    "validation.frilans_jobberFortsattSomFrilans.yesOrNoIsUnanswered": "Du må svare på om du fortsatt jobber som frilanser.",
 
-    "validation.selvstendig_erSelvstendigNæringsdrivende.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt inntekt som selvstendig næringsdrivende i de siste 4 ukene",
-    "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har flere enn én virksomhet som er aktiv",
-    "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert informasjon om virksomheten din",
-    "validation.aktivitetFravær.noValue": "Du må velge hvilket arbeid du hadde fravær fra {dato}",
-    "validation.harFosterbarn.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har fosterbarn",
+    "validation.selvstendig_erSelvstendigNæringsdrivende.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du var selvstendig næringsdrivende.",
+    "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har flere enn én virksomhet som er aktiv.",
+    "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert informasjon om virksomheten din.",
+    "validation.aktivitetFravær.noValue": "Du må velge hvilket arbeid du hadde fravær fra {dato}.",
+    "validation.harFosterbarn.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har fosterbarn.",
     "validation.fosterbarn.listIsEmpty": "Du har svart at du har fosterbarn, du må derfor legge til fosterbarn.",
-    "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du har bodd i utlandet i hele eller deler av de siste 12 månedene",
-    "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de siste 12 månedene",
-    "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de siste 12 månedene har datoer som overlapper",
-    "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene de siste 12 månedene er utenfor tillatt tidsrom",
-    "validation.skalBoUtenforNorgeNeste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du planlegger å bo i utlandet i hele eller deler av de neste 12 månedene",
-    "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de neste 12 månedene",
-    "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de neste 12 månedene har datoer som overlapper",
-    "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene de neste 12 månedene er utenfor tillatt tidsrom",
-    "validation.harBekreftetOpplysninger.notChecked": "Du må bekrefte at opplysningene er riktige"
+    "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du har bodd i utlandet i hele eller deler av de siste 12 månedene.",
+    "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de siste 12 månedene.",
+    "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de siste 12 månedene har datoer som overlapper.",
+    "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene de siste 12 månedene er utenfor tillatt tidsrom.",
+    "validation.skalBoUtenforNorgeNeste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du planlegger å bo i utlandet i hele eller deler av de neste 12 månedene.",
+    "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de neste 12 månedene.",
+    "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de neste 12 månedene har datoer som overlapper.",
+    "validation.utenlandsoppholdNeste12Mnd.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene de neste 12 månedene er utenfor tillatt tidsrom.",
+    "validation.harBekreftetOpplysninger.notChecked": "Du må bekrefte at opplysningene er riktige."
 }
