--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -134,29 +134,6 @@
     "welcomingPage.modal.behandlingAvPersonalia.tittel": "Om behandling av personopplysninger",
     "welcomingPage.begynnsøknad": "Gå til søknaden",
 
-    "modal.personalopplysninger.tittel": "Slik behandler NAV personopplysningene dine",
-    "modal.personalopplysninger.intro.1": "NAV innhenter og mottar opplysninger om deg når du sender inn en søknad. Det er nødvendig for at du skal kunne få riktig tjeneste og ytelser.",
-    "modal.personalopplysninger.intro.2a": "Du har valgt å søke om omsorgspenger. Det er en ytelse fra folketrygden som du kan få hvis du fyller vilkårene. Vilkårene står på",
-    "modal.personalopplysninger.intro.2b": "nav.no/omsorgspenger",
-    "modal.personalopplysninger.opplysninger.tittel": "Opplysningene vi innhenter",
-    "modal.personalopplysninger.opplysninger.part1": "Opplysningene kommer enten fra deg eller fra offentlige registre:",
-    "modal.personalopplysninger.opplysninger.1": "arbeidsforholdene dine og inntekten din",
-    "modal.personalopplysninger.opplysninger.2": "ytelser du mottar fra NAV",
-    "modal.personalopplysninger.opplysninger.3": "opplysninger om barnets helse",
-    "modal.personalopplysninger.opplysninger.4": "tilknytningen din til Norge",
-    "modal.personalopplysninger.opplysninger.5": "trygdeordninger du kan ha rett til i andre land",
-    "modal.personalopplysninger.opplysninger.part2": "Vi kan også sende opplysninger om deg til trygdemyndigheter i andre land.",
-
-    "modal.personalopplysninger.svar.tittel": "Svar på søknaden",
-    "modal.personalopplysninger.svar.part1": "Du får et brev fra NAV når søknaden din er behandlet. Brevet inneholder",
-    "modal.personalopplysninger.svar.1": "begrunnelse for beslutningen og reglene som er brukt",
-    "modal.personalopplysninger.svar.2": "hvordan du får innsyn i saksbehandlingen",
-    "modal.personalopplysninger.svar.3": "hvordan du kan klage hvis du er uenig",
-
-    "modal.personalopplysninger.personvern.tittel": "Personvern i NAV",
-    "modal.personalopplysninger.personvern.part1a": "Vil du vite mer om hvordan NAV behandler personopplysninger? Se",
-    "modal.personalopplysninger.personvern.part1b": "nav.no/personvern",
-
     "modal.minePlikter.tittel": "Mine plikter",
     "modal.minePlikter.part1": "Jeg forstår at det kan få konsekvenser for retten min til omsorgspenger hvis jeg",
     "modal.minePlikter.part1a": "gir uriktig informasjon eller",
@@ -421,6 +398,26 @@
     "frilanser.summary.nårSluttet.header": "Når sluttet du som frilanser?",
 
     "summary.andreIntekter.header": "Andre utbetalinger",
+
+    "modal.personopplysninger.dialogtittel": "Om behandling av personopplysninger",
+    "modal.personopplysninger.1": "Slik behandler NAV personopplysningene dine",
+    "modal.personopplysninger.2": "Vi innhenter og mottar opplysninger om deg for å behandle saken din. Det er nødvendig for at du skal få riktig tjeneste. Saken din kan behandles automatisk.",
+    "modal.personopplysninger.3": "Hvilke opplysninger innhenter vi?",
+    "modal.personopplysninger.4": "Opplysningene vi innhenter kommer enten fra deg eller fra offentlige registre:",
+    "modal.personopplysninger.4.1": "hvilke barn du er registrert som forelder til",
+    "modal.personopplysninger.4.2": "opplysninger om barnets helse",
+    "modal.personopplysninger.4.3": "arbeidsforholdene dine og inntekten din",
+    "modal.personopplysninger.4.4": "ytelser du mottar fra NAV",
+    "modal.personopplysninger.4.5": "tilknytningen din til Norge",
+    "modal.personopplysninger.4.6": "trygdeordninger du kan ha rett til i andre land. Vi kan også sende opplysninger om deg til trygdemyndigheter i andre land.",
+    "modal.personopplysninger.5": "Svar fra NAV",
+    "modal.personopplysninger.6": "Du får et brev fra NAV når søknaden din er behandlet. Brevet inneholder:",
+    "modal.personopplysninger.6.1": "begrunnelse for beslutningen og reglene som er brukt",
+    "modal.personopplysninger.6.2": "hvordan du får innsyn i saksbehandlingen",
+    "modal.personopplysninger.6.3": "hvordan du kan klage hvis du er uenig",
+    "modal.personopplysninger.7.1": "Vil du vite mer om hvordan NAV behandler personopplysninger? Se ",
+    "modal.personopplysninger.7.2": "nav.no/personvern",
+    "modal.personopplysninger.7.3": ".",
 
     "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp.",
     "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp.",
