--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -87,6 +87,32 @@
     "step.periode.stepTitle": "Første og siste dag du skal søke for",
     "step.periode.stepIndicatorLabel": "Første og siste dag du skal søke for",
 
+    "step.dine-barn.pageTitle": "Dine barn",
+    "step.dine-barn.stepTitle": "Dine barn",
+    "step.dine-barn.stepIndicatorLabel": "Dine barn",
+    "step.dine-barn.counsellorPanel.avsnitt.1": "Som hovedregel må du som er selvstendig næringsdrivende eller frilanser dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Dagene trenger ikke tas ut sammenhengende.",
+    "step.dine-barn.counsellorPanel.avsnitt.2": "Hvis du har barn som har kronisk sykdom eller funksjonshemming, og som du har søkt og fått ekstra omsorgsdager for, kan du ha rett på utbetaling fra NAV fra den første dagen.",
+
+    "step.dine-barn.født": "Født",
+    "step.dine-barn.listHeader.registrerteBarn": "Dine barn",
+
+    "step.dine-barn.harFåttEkstraOmsorgsdager.label": "Ekstra omsorgsdager",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.spm": "Har du fått ekstra omsorgsdager for barn fordi barnet har kronisk sykdom eller funksjonshemming?",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.nei.alertStripe": "Siden alle barna dine er 13 år i år eller eldre og du ikke har ekstra omsorgsdager for noen av barna har du ikke rett til å bruke omsorgsdager.",
+    "step.dine-barn.utvidetRettFor.spm": "Kryss av for det eller de barna som har utvidet rett",
+
+    "step.dine-barn.bekrefterDektTiDagerSelv.info": "Du må selv dekke de 10 første dagene du bruker hvert kalenderår. Hvis du søker uten å ha dekket alle de 10 første dagene selv, vil du få avslag på søknaden",
+    "step.dine-barn.bekrefterDektTiDagerSelv.label": "For å gå videre må du bekrefte at du allerede har dekt 10 dager selv i år",
+    "step.dine-barn.bekrefterDektTiDagerSelv": "Jeg bekrefter at jeg allerede har dekt 10 dager selv i år",
+
+    "step.dine-barn.nextButtonLabel": "Fortsett",
+    "step.dine-barn.info.ingenbarn.1": "Vi fant ingen barn registrert på deg. Har du  barn som ikke er registrert her, kan du selv legge inn disse. Dette kan være fosterbarn, eller om du har barn som er fylt 18 år og som har ekstra omsorgsdager på grunn av kronisk sykdom eller funksjonshemning.",
+    "step.dine-barn.info.ingenbarn.2": "Du må legge til minst ett barn for å kunne gå videre.",
+    "step.dine-barn.info.spm.andreBarn": "Har du andre barn?",
+    "step.dine-barn.info.spm.flereBarn": "Har du flere barn?",
+    "step.dine-barn.info.spm.text": "Har du barn som ikke er registrert her, kan du legge inn disse selv. Det kan for eksempel være fosterbarn.",
+    "step.dine-barn.formLeggTilBarn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
+
     "step.fravaer.pageTitle": "Dager du har vært hjemme med barn - Søknad om utbetaling av omsorgspenger",
     "step.fravaer.stepTitle": "Dager du har vært hjemme med barn",
     "step.fravaer.stepIndicatorLabel": "Dager du har vært hjemme med barn",
@@ -155,14 +181,6 @@
     "step.periode.sisteDagMedFravær.spm": "Hva er siste dag du skal søke for?",
 
     "step.fravaer.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
-    "step.fravaer.dekkeSelv.spm": "Har du dekket de 10 første omsorgsdagene selv?",
-    "step.fravaer.dekkeSelv.tittel": "Omsorgsdager du må dekke selv",
-    "step.fravaer.dekkeSelv.info.tittel": "Hva betyr dette?",
-    "step.fravaer.dekkeSelv.info.1": "Som selvstendig næringsdrivende og/eller frilanser må du selv dekke de 10 første omsorgsdagene du bruker hvert år. Det vil si at du tidligst kan søke om utbetaling fra den 11. omsorgsdagen.",
-    "step.fravaer.dekkeSelv.info.2": "Du kan ha rett til utbetaling fra første dag hvis du kun har barn som er 13 år eller eldre, som er kronisk sykt eller funksjonshemmet.",
-    "step.fravaer.dekkeSelv.info.3": "I disse tilfellene må du ha søkt om og fått ekstra omsorgsdager.",
-    "step.fravaer.ikkeDekket.info.1": "For å søke om utbetaling av omsorgspenger må du vanligvis først ha dekket de 10 første omsorgsdagene selv.",
-    "step.fravaer.ikkeDekket.info.2": "I noen tilfeller kan du ha rett til utbetaling fra første dag. Det er hvis du kun har barn som er 13 år eller eldre og som du har fått ekstra omsorgsdager for fordi barnet er kronisk sykt eller funksjonshemmet.",
 
     "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
     "step.fravaer.dager_med_fullt_fravært.info": "TODO",
@@ -174,10 +192,10 @@
 
     "step.fravaer.info.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
     "step.fravaer.info.2": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn de 10 første dagene som du dekker selv.",
-    "step.fravaer.spm.harDekketTiFørsteDagerSelv": "Har du dekket de 10 første omsorgsdagene selv?",
+
     "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
     "step.fravaer.dager.tittel": "Omsorgsdager du søker utbetaling for",
-    "step.fravaer.dager.info": "Her skal du legge inn dagene du søker utbetaling for. Du kan kun søke om utbetaling fra ett og samme år. Det betyr at hvis du skal søke om utbetaling for 2020 i tillegg til 2021 må du sende to søknader.",
+    "step.fravaer.dager.info": "Her skal du legge inn dagene du søker utbetaling for. Du kan kun søke om utbetaling fra ett og samme år. Det betyr at hvis du skal søke om utbetaling for 2021 i tillegg til 2022 må du sende to søknader.",
     "step.fravaer.harPerioderMedFravær.listTitle": "Dager med fullt fravær fra jobb",
     "step.fravaer.harPerioderMedFravær.addLabel": "Legg til dager med fullt fravær fra jobb",
     "step.fravaer.harPerioderMedFravær.modalTitle": "Dager med fullt fravær fra jobb",
@@ -196,13 +214,6 @@
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
-    "steg.barn.pageTitle": "Fosterbarn",
-    "steg.barn.stepTitle": "Fosterbarn",
-    "steg.barn.intro": "Vi henter inn barn som er registrert på deg fra folkeregisteret, men dette får vi ikke gjort med fosterbarn. Hvis du har fosterbarn kan du legge dem til selv.",
-    "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
-    "steg.barn.nextButtonLabel": "Fortsett",
-    "steg.barn.dineBarn": "Dine fosterbarn",
-
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandNeste12.spm": "Planlegger du å bo i utlandet i hele eller deler av de neste 12 månedene?",
     "steg.medlemsskap.annetLandSiste12.hjelp": "Du svarer ja bare hvis du har oppholdt deg fast i et annet land enn Norge. Korte utlandsturer i forbindelse med for eksempel ferie regnes ikke med.",
@@ -219,8 +230,10 @@
     "steg.oppsummering.søker.omDeg": "Om deg",
     "steg.oppsummering.søker.fnr": "Fødselsnummer: {fødselsnummer}",
 
-    "steg.oppsummering.barn.header": "Fosterbarn",
-    "steg.oppsummering.barn.alleBarn": "Fosterbarn du har lagt til",
+    "steg.oppsummering.dineBarn": "Dine Barn",
+    "steg.oppsummering.dineBarn.bekrefterDektTiDagerSelv": "Jeg bekrefter at jeg allerede har dekt 10 dager selv i år",
+    "step.oppsummering.dineBarn.listItem": " (fnr. {identitetsnummer})",
+    "step.oppsummering.dineBarn.listItem.utvidetRett": "(har utvidet rett)",
 
     "steg.oppsummering.arbeidssituasjon.header": "Din arbeidssituasjon",
     "steg.oppsummering.harSøktOmAndreUtbetalinger": "Hvilke andre utbetalinger har du søkt om?",
@@ -425,6 +438,9 @@
     "modal.personopplysninger.7.2": "nav.no/personvern",
     "modal.personopplysninger.7.3": ".",
 
+    "validation.harUtvidetRett.yesOrNoIsUnanswered": "Du må svare at du har fått ekstra omsorgsdager for barn fordi barnet har kronisk sykdom eller funksjonshemming eller ikke.",
+    "validation.harUtvidetRettFor.listIsEmpty": "Du må krysse av for det eller de barna som har utvidet rett.",
+    "validation.harDekketTiFørsteDagerSelv.notChecked": "Du må bekrefte at du allerede har dekt 10 dager selv i år.",
     "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp.",
     "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp.",
     "validation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
@@ -453,8 +469,6 @@
     "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har flere enn én virksomhet som er aktiv.",
     "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert informasjon om virksomheten din.",
     "validation.aktivitetFravær.noValue": "Du må velge hvilket arbeid du hadde fravær fra {dato}.",
-    "validation.harFosterbarn.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har fosterbarn.",
-    "validation.fosterbarn.listIsEmpty": "Du har svart at du har fosterbarn, du må derfor legge til fosterbarn.",
     "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Du må svare på om du har bodd i utlandet i hele eller deler av de siste 12 månedene.",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for de siste 12 månedene.",
     "validation.utenlandsoppholdSiste12Mnd.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene de siste 12 månedene har datoer som overlapper.",
