--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -90,8 +90,8 @@
     "step.dine-barn.pageTitle": "Dine barn",
     "step.dine-barn.stepTitle": "Dine barn",
     "step.dine-barn.stepIndicatorLabel": "Dine barn",
-    "step.dine-barn.counsellorPanel.avsnitt.1": "Som hovedregel må du som er selvstendig næringsdrivende eller frilanser dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Dagene trenger ikke tas ut sammenhengende.",
-    "step.dine-barn.counsellorPanel.avsnitt.2": "Hvis du har barn som har kronisk sykdom eller funksjonshemming, og som du har søkt og fått ekstra omsorgsdager for, kan du ha rett på utbetaling fra NAV fra den første dagen.",
+    "step.dine-barn.counsellorPanel.avsnitt.1": "Som selvstendig næringsdrivende eller frilanser må du som hovedregel dekke de 10 første omsorgsdagene selv. Du kan altså ha rett til utbetaling av omsorgsdager fra den 11. dagen. De 10 første dagene som du skal dekke selv, trenger ikke å tas ut sammenhengende.",
+    "step.dine-barn.counsellorPanel.avsnitt.2": "Du kan ha rett til utbetaling fra den første dag når du kun har barn som fyller 13 år i år eller er eldre, og som har kronisk sykdom eller funksjonshemning. Dette gjelder bare når du har søkt og fått ekstra omsorgsdager for barn i denne situasjonen.",
 
     "step.dine-barn.født": "Født",
     "step.dine-barn.listHeader.registrerteBarn": "Dine barn",
@@ -100,25 +100,25 @@
     "step.dine-barn.annetBarnListAndDialog.modalTitle": "Legg til barn'",
 
     "step.dine-barn.harFåttEkstraOmsorgsdager.label": "Ekstra omsorgsdager",
-    "step.dine-barn.harFåttEkstraOmsorgsdager.spm": "Har du fått ekstra omsorgsdager for barn fordi barnet har kronisk sykdom eller funksjonshemming?",
-    "step.dine-barn.harFåttEkstraOmsorgsdager.spm.ettBarn": "Har du fått ekstra omsorgsdager fordi barnet har kronisk sykdom eller funksjonshemming?",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.spm": "Har du fått ekstra omsorgsdager for barn som har kronisk sykdom eller funksjonshemning?",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.spm.ettBarn": "Har du fått ekstra omsorgsdager for barnet som har kronisk sykdom eller funksjonshemming?",
 
-    "step.dine-barn.harFåttEkstraOmsorgsdager.nei.alertStripe": "Siden alle barna dine er 13 år i år eller eldre og du ikke har ekstra omsorgsdager for noen av barna har du ikke rett til å bruke omsorgsdager.",
-    "step.dine-barn.utvidetRettFor.spm": "Kryss av for det eller de barna som har utvidet rett",
-    "step.dine-barn.utvidetRettFor.info": "Siden du har kun barn over 13 og du har utvidet rett kan du søke utbetaling fra NAV fra den første dagen du bruker. Gå videre til neste steg for å legge inn dager du søker utbetaling for.",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.nei.alertStripe": "Du har ikke rett til å bruke omsorgsdager. Når du kun har barn som er 13 år eller eldre, må du ha søkt om og fått ekstra omsorgsdager for å kunne bruke omsorgsdager.",
+    "step.dine-barn.utvidetRettFor.spm": "Kryss av for barn du har fått ekstra omsorgsdager for:",
+    "step.dine-barn.utvidetRettFor.info": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du bruker. Dette er fordi du kun har barn som er 13 år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
     "step.dine-barn.utvidetRettFor.info.ettBarn": "Siden barnet ditt er 13 år i år eller eldre og du har utvidet rett kan du søke utbetaling fra NAV fra den første dagen du bruker. Gå videre til neste steg for å legge inn dager du søker utbetaling for.",
 
-    "step.dine-barn.bekrefterDektTiDagerSelv.info.titel": "Dager du må dekke selv",
-    "step.dine-barn.bekrefterDektTiDagerSelv.info": "Siden du har barn som har fylt 12 i år eller er yngre må du dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Du kan søke om utbetaling fra NAV fra den 11 dagen.",
-    "step.dine-barn.bekrefterDektTiDagerSelv.label": "For å gå videre må du bekrefte at du allerede har dekt 10 dager selv i år",
-    "step.dine-barn.bekrefterDektTiDagerSelv": "Jeg bekrefter at jeg allerede har dekt 10 dager selv i år",
+    "step.dine-barn.bekrefterDektTiDagerSelv.info.titel": "Omsorgsdager du må dekke selv",
+    "step.dine-barn.bekrefterDektTiDagerSelv.info": "Når du har barn som har fylt 12 år i år, eller er yngre, må du dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Du kan søke om utbetaling fra NAV fra den 11. dagen.",
+    "step.dine-barn.bekrefterDektTiDagerSelv.label": "For å gå videre må du bekrefte at du har dekket 10 omsorgsdager i år",
+    "step.dine-barn.bekrefterDektTiDagerSelv": "Ja, jeg bekrefter at jeg selv har dekket 10 omsorgsdager i år",
 
     "step.dine-barn.nextButtonLabel": "Fortsett",
     "step.dine-barn.info.ingenbarn.1": "Vi fant ingen barn registrert på deg. Har du  barn som ikke er registrert her, kan du selv legge inn disse. Dette kan være fosterbarn, eller om du har barn som er fylt 18 år og som har ekstra omsorgsdager på grunn av kronisk sykdom eller funksjonshemning.",
-    "step.dine-barn.info.ingenbarn.2": "Du må legge til minst ett barn for å kunne gå videre.",
-    "step.dine-barn.info.spm.andreBarn": "Har du andre barn?",
-    "step.dine-barn.info.spm.flereBarn": "Har du flere barn?",
-    "step.dine-barn.info.spm.text": "Har du barn som ikke er registrert her, kan du legge inn disse selv. Det kan for eksempel være fosterbarn.",
+    "step.dine-barn.info.ingenbarn.2": "Du må registrere minst ett barn for å kunne gå videre i søknaden.",
+    "step.dine-barn.info.spm.andreBarn": "Har du barn som ikke er registrert her?",
+    "step.dine-barn.info.spm.flereBarn": "Har du flere barn som ikke er registrert her?",
+    "step.dine-barn.info.spm.text": "Hvis du har barn som ikke er registrert her, kan du legge inn disse selv. Det kan for eksempel være fosterbarn, eller barn som er bosatt i utlandet.",
     "step.dine-barn.formLeggTilBarn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
 
     "step.fravaer.pageTitle": "Dager du har vært hjemme med barn - Søknad om utbetaling av omsorgspenger",
