Fiks tekster steg2

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -97,7 +97,7 @@
     "step.dine-barn.listHeader.registrerteBarn": "Dine barn",
     "step.dine-barn.annetBarnListAndDialog.addLabel": "Legg til barn",
     "step.dine-barn.annetBarnListAndDialog.listTitle": "Andre barn",
-    "step.dine-barn.annetBarnListAndDialog.modalTitle": "Legg til barn'",
+    "step.dine-barn.annetBarnListAndDialog.modalTitle": "Legg til barn",
 
     "step.dine-barn.harFåttEkstraOmsorgsdager.label": "Ekstra omsorgsdager",
     "step.dine-barn.harFåttEkstraOmsorgsdager.spm": "Har du fått ekstra omsorgsdager for barn som har kronisk sykdom eller funksjonshemning?",
@@ -198,15 +198,17 @@
     "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV?",
     "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger har du søkt om?",
 
-    "step.fravaer.info.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
-    "step.fravaer.info.2": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn de 10 første dagene som du dekker selv.",
+    "step.fravaer.info.1": "Du kan få utbetalt omsorgspenger for bruk av omsorgsdager i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
+    "step.fravaer.info.2": "Du kan kun søke om utbetaling fra ett og samme år. Det betyr at hvis du skal søke om utbetaling for {forrigeÅr} i tillegg til {inneværendeÅr}, må du sende to søknader.",
 
     "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
     "step.fravaer.dager.tittel": "Omsorgsdager du søker utbetaling for",
-    "step.fravaer.dager.info": "Her skal du legge inn dagene du søker utbetaling for. Du kan kun søke om utbetaling fra ett og samme år. Det betyr at hvis du skal søke om utbetaling for 2021 i tillegg til 2022 må du sende to søknader.",
+    "step.fravaer.dager.info": "Her skal du legge inn dagene du søker utbetaling for. Basert på svarene du har gitt i søknaden, kan du søke utbetaling fra den 11. omsorgsdagen du brukte.",
+    "step.fravaer.dager.info.harBarnMedUtvidetRett": "Her skal du legge inn dagene du søker utbetaling for. Basert på svarene du har gitt i søknaden, kan du søke utbetaling fra den første omsorgsdagen du brukte.",
     "step.fravaer.harPerioderMedFravær.listTitle": "Dager med fullt fravær fra jobb",
     "step.fravaer.harPerioderMedFravær.addLabel": "Legg til dager med fullt fravær fra jobb",
     "step.fravaer.harPerioderMedFravær.modalTitle": "Dager med fullt fravær fra jobb",
+    "fravær.form.periode.tittel": "Dager du søker utbetaling for",
     "step.fravaer.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
     "step.fravaer.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
     "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
