--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -96,7 +96,7 @@
     "step.dine-barn.født": "Født",
     "step.dine-barn.listHeader.registrerteBarn": "Dine barn",
     "step.dine-barn.annetBarnListAndDialog.addLabel": "Legg til barn",
-    "step.dine-barn.annetBarnListAndDialog.listTitle": "Andre barn",
+    "step.dine-barn.annetBarnListAndDialog.listTitle": "Barn du har lagt til",
     "step.dine-barn.annetBarnListAndDialog.modalTitle": "Legg til barn",
 
     "step.dine-barn.harFåttEkstraOmsorgsdager.label": "Ekstra omsorgsdager",
