Oppdatere introtekst Om barn steget

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -90,7 +90,7 @@
     "step.dine-barn.pageTitle": "Om barn",
     "step.dine-barn.stepTitle": "Om barn",
     "step.dine-barn.stepIndicatorLabel": "Om barn",
-    "step.dine-barn.counsellorPanel.avsnitt.1": "Som selvstendig næringsdrivende eller frilanser må du som hovedregel dekke de 10 første omsorgsdagene selv. Du kan altså ha rett til utbetaling av omsorgsdager fra den 11. dagen. De 10 første dagene som du skal dekke selv, trenger ikke å tas ut sammenhengende.",
+    "step.dine-barn.counsellorPanel.avsnitt.1": "Når du er selvstendig næringsdrivende eller frilanser, må du som hovedregel selv dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Du kan altså ha rett til utbetaling av omsorgspenger fra den 11. dagen per kalenderår. De 10 første dagene som du skal dekke selv, trenger ikke å tas ut sammenhengende.",
     "step.dine-barn.counsellorPanel.avsnitt.2": "Du kan ha rett til utbetaling fra den første dagen når du kun har barn som fyller 13 år i år eller er eldre, og som har kronisk sykdom eller funksjonshemning. Dette gjelder bare når du har søkt og fått ekstra omsorgsdager for barn i denne situasjonen.",
 
     "step.dine-barn.seksjonsTittel": "Dine barn",
