Oppdatere tekst om barn i utlandet

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -119,7 +119,7 @@
     "step.dine-barn.info.ingenbarn.2": "Du må registrere minst ett barn for å kunne gå videre i søknaden.",
     "step.dine-barn.info.spm.andreBarn": "Har du barn som ikke er registrert her?",
     "step.dine-barn.info.spm.flereBarn": "Har du flere barn som ikke er registrert her?",
-    "step.dine-barn.info.spm.text": "Hvis du har barn som ikke er registrert her, kan du legge inn disse selv. Det kan for eksempel være fosterbarn, eller barn som er bosatt i utlandet.",
+    "step.dine-barn.info.spm.text": "Hvis du har barn som ikke er registrert her, kan du legge inn disse selv. Det kan for eksempel være fosterbarn.",
     "step.dine-barn.formLeggTilBarn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
 
     "step.fravaer.pageTitle": "Dager du har vært hjemme med barn - Søknad om utbetaling av omsorgspenger",
