--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -106,8 +106,8 @@
 
     "step.dine-barn.harFåttEkstraOmsorgsdager.nei.alertStripe": "Du har ikke rett til å bruke omsorgsdager. Når du kun har barn som er 13 år eller eldre, må du ha søkt om og fått ekstra omsorgsdager for å kunne bruke omsorgsdager.",
     "step.dine-barn.utvidetRettFor.spm": "Kryss av for barn du har fått ekstra omsorgsdager for:",
-    "step.dine-barn.utvidetRettFor.info": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
-    "step.dine-barn.utvidetRettFor.info.ettBarn": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
+    "step.dine-barn.utvidetRettFor.info": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år i år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
+    "step.dine-barn.utvidetRettFor.info.ettBarn": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år i år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
 
     "step.dine-barn.bekrefterDektTiDagerSelv.info.titel": "Omsorgsdager du må dekke selv",
     "step.dine-barn.bekrefterDektTiDagerSelv.info": "Når du har barn som har fylt 12 år i år, eller er yngre, må du dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Du kan søke om utbetaling fra NAV fra den 11. dagen.",
